Infra/database-replica.yaml

#------------------------------------Statefult Set Database------------------------
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: students-pg-replica-sset
spec:
  serviceName: "students-pg-master-svc"
  replicas: 1
  selector:
    matchLabels:
        app: students-api
        type: data-base-master-replica
        sub-type: replica-db
  template:
    metadata:
      labels:
        app: students-api
        type: data-base-master-replica
        sub-type: replica-db
    spec:
      containers:
      - name: pd-db
        image: postgres:15
        command: [ "docker-entrypoint.sh", "-c", "config_file=/config/postgresql.conf" ]
          
        ports:
        - containerPort: 5432
          name: postgres
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - $POSTGRES_USER
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U $POSTGRES_USER
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 30
        volumeMounts:
        - name: postgres-replica-data
          mountPath: /data
        - name: archive-replica-data
          mountPath: /mnt/server/archive 
        - name: pg-config-volume
          mountPath: /config
       

      volumes:
        - name: pg-config-volume
          projected:
            sources:
            - configMap:
                name: students-pg-replica-hba-config-map
            - configMap:
                name: students-pg-replica-ident-config-map
            - configMap:
                name: students-pg-replica-pgconf-config-map
           
  volumeClaimTemplates:
  - metadata:
      name: postgres-replica-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: archive-replica-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi

---
