Infra/debug-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  labels:
    app: debug
spec:
  containers:
  - name: debug-container
    image: curlimages/curl:latest 
    command: [ "sleep", "infinity" ] 
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
---

apiVersion: v1
kind: Pod
metadata:
  name: psql-client
  labels:
    app: psql-client
spec:
  containers:
  - name: psql-client
    image: postgres:15
    command: [ "sleep", "infinity" ] 
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
