Infra/test-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mssqltools
spec:
  containers:
  - name: mssqltools
    image: mcr.microsoft.com/mssql-tools:latest
