Infra/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-backends-deployment
  labels:
    app: students-service
    type: backend
    subtype: api
spec:
  replicas: 1
  selector:
    matchLabels:
      service-name: students-api
  template:
    metadata:
      labels:
        app: students-service
        type: backend
        subtype: api
        service-name: students-api
    spec:
      containers:
      - name: backend-api
        image: students-api:v1.3
        imagePullPolicy: IfNotPresent
        resources:
          limits:
             cpu: 220m
             memory: 275Mi
          requests:
            cpu: 200m
            memory: 256Mi 
        startupProbe:
          httpGet:
            path: /health/startup
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          successThreshold: 3
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    service-name: students-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
