Infra/database-master.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: students-pg-master-sset
spec:
  serviceName: "students-pg-master-svc"
  replicas: 1
  selector:
    matchLabels:
        app: students-api
        type: data-base-master-replica
        sub-type: infra-db
  template:
    metadata:
      labels:
        app: students-api
        type: data-base-master-replica
        sub-type: infra-db
    spec:
      containers:
      - name: pd-db
        image: postgres:15
        command: [ "docker-entrypoint.sh", "-c", "config_file=/config/postgresql.conf" ]
          
        ports:
        - containerPort: 5432
          name: postgres
        readinessProbe:
          tcpSocket:
            port: 5432
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - $POSTGRES_USER
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U $POSTGRES_USER
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 30
        volumeMounts:
        - name: postgres-data
          mountPath: /data
        - name: archive-data
          mountPath: /mnt/server/archive 
        - name: pg-config-volume
          mountPath: /config
        - name: startup-script-volume
          mountPath: /docker-entrypoint-initdb.d/script.sql
          subPath: script.sql

      volumes:
        - name: startup-script-volume
          configMap:
            name: students-pg-master-startup-script-config-map
        - name: pg-config-volume
          projected:
            sources:
            - configMap:
                name: students-pg-master-hba-config-map
            - configMap:
                name: students-pg-master-ident-config-map
            - configMap:
                name: students-pg-master-pgconf-config-map
           
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: archive-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi

---

#------------------------------------Headless Service------------------------

apiVersion: v1
kind: Service
metadata:
  name: students-pg-master-svc
  labels:
    app: students-api
    type: data-base-master-replica
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: students-api
    type: data-base-master-replica
