Infra/database.yaml


#------------------------------------Statefult Set Of Database------------------------
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: students-pg-sset
spec:
  serviceName: "students-pg-svc"
  replicas: 1
  selector:
    matchLabels:
        app: students-api
        type: data-base
        sub-type: infra-db
  template:
    metadata:
      labels:
        app: students-api
        type: data-base
        sub-type: infra-db
    spec:
      containers:
      - name: pd-db
        image: postgres:15 
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi

---

#------------------------------------Headless Service------------------------

apiVersion: v1
kind: Service
metadata:
  name: students-pg-svc
  labels:
    app: students-api
    type: data-base
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: students-api
    type: data-base
    sub-type: infra-db
