Infra/frontend.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-frontend-deployment
  labels:
    app: students-service
    type: frontend
    subtype: http-server
spec:
  replicas: 3
  selector:
    matchLabels:
      service-name: students-frontend-server
  template:
    metadata:
      labels:
       app: students-service
       type: frontend
       subtype: http-server
       service-name: students-frontend-server
    spec:
      containers:
      - name: frontend-server
        image: host.minikube.internal:5000/frontend-server:v1.3
        resources:
          limits:
             cpu: 220m
             memory: 275Mi
          requests:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
            httpHeaders:
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/config
        ports:
        - containerPort: 80
      volumes:
        - name: config-volume
          configMap:
            name: backend-port

---

apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: NodePort
  selector:
    service-name: students-frontend-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
